feat: Implement Multiplicative Group Modulo N sequencer with number theory utilities. Partially working, for instance modulo=53, generator=3 seems to work, and modulo=59, generator=3 have the expected appearance. But for most settings it is currently broken, trying to fix now. Also added a rotation to CircleCurve to compare to standard "residue designs".

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ conversation_backups/convo2_chat_backup.md
 conversation_backups/convo1_refactor/conversation_copy_paste.txt
 conversation_backups/convo1_refactor/.#task.md
 experiments/ComplexPolynomialMandals.html
+papers/Richeson - 2023 - Residue Designs, String Art, and Number Theory.pdf
