--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ conversation_backups/convo1_refactor/conversation_copy_paste.txt
 conversation_backups/convo1_refactor/.#task.md
 experiments/ComplexPolynomialMandals.html
 papers/Richeson - 2023 - Residue Designs, String Art, and Number Theory.pdf
+deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.md
+deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.pdf
