chore: Add `design/hybridization_capabilities.md` to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ experiments/ComplexPolynomialMandals.html
 papers/Richeson - 2023 - Residue Designs, String Art, and Number Theory.pdf
 deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.md
 deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.pdf
+design/hybridization_capabilities.md
