--- a/apps/Maurer_Rose_Interpolator/package.json
+++ b/apps/Maurer_Rose_Interpolator/package.json
@@ -14,5 +14,7 @@
         "tailwindcss": "^3.4.3",
         "vite": "^5.2.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "grapick": "^0.1.13"
+    }
 }
