--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ papers/Richeson - 2023 - Residue Designs, String Art, and Number Theory.pdf
 deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.md
 deep_research/Non-Standard Pseudo-Generators in Additive Groups Modulo N, v5.pdf
 design/hybridization_capabilities.md
+apps/Chordal_Rosette_Explorer/node_modules/.vite/deps_temp_d02a33dd/package.json
+apps/Chordal_Rosette_Explorer/node_modules/.vite/deps_temp_d02a33dd/package.json
